samples/_failures_safe/1761128400_33348e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfaa5150.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_cfaa5150.c:161:9: error: expected declaration or statement at end of input
  161 |         for (int i = 0; i < graph->E; i++) {
      |         ^~~
./samples/SAFE/__tmp_cfaa5150.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cfaa5150.c:161:9: error: expected declaration or statement at end of input
